6805864: 4/3 Problem with jvmti->redefineClasses: some methods don't get redefined

Remove incorrect optimization in klassItable::adjust_method_entries(). Add RedefineClasses() tracing support for obsolete method entry.

Reviewed-by: acorn, swamyv